# demo_atfal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  cliff.toml  demo.ipynb  pyproject.toml
examples/: epr_usage_demo.py  wepr_demo.ipynb
scripts/: compress_model.py
scripts/cablibration_llm/: generate_responses.py  plot_calibration.py  rates_answers.py  score_responses.py
src/artefactual/: __init__.py  test_entropy.py  test_scores.py
src/artefactual/calibration/: outputs_entropy.py
src/artefactual/config/: __init__.py
src/artefactual/data/: __init__.py  readers.py
src/artefactual/preprocessing/: __init__.py  openai_parser.py  parser.py  vllm_parser.py
src/artefactual/scoring/: __init__.py  logprobs.py  methods.py  uncertainty_detector.py  wepr.py
src/artefactual/scoring/entropy_methods/: __init__.py  epr.py  wepr.py
src/artefactual/scoring/probability_methods/: sentence_proba.py
tests/: test_data_processing.py  test_epr.py  test_uncertainty.py
tests/calibration/: test_train_calibration.py
tests/preprocessing/: test_parser.py
tests/scoring/entropic_methods/: test_uncertainty.py
tests/scoring/probability_methods/: test_sentence_proba.py
